content/_generated-doc/3.8/config/quarkus-logging-json.adoc

:summaryTableId: quarkus-logging-json
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-logging-json_quarkus-log-console-json-console-logging]]link:#quarkus-logging-json_quarkus-log-console-json-console-logging[Console logging]

h|Type
h|Default

a| [[quarkus-logging-json_quarkus-log-console-json]]`link:#quarkus-logging-json_quarkus-log-console-json[quarkus.log.console.json]`


[.description]
--
Determine whether to enable the JSON console formatting extension, which disables "normal" console formatting.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-logging-json_quarkus-log-console-json-pretty-print]]`link:#quarkus-logging-json_quarkus-log-console-json-pretty-print[quarkus.log.console.json.pretty-print]`


[.description]
--
Enable "pretty printing" of the JSON record. Note that some JSON parsers will fail to read the pretty printed output.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_PRETTY_PRINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_PRETTY_PRINT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-logging-json_quarkus-log-console-json-date-format]]`link:#quarkus-logging-json_quarkus-log-console-json-date-format[quarkus.log.console.json.date-format]`


[.description]
--
The date format to use. The special string "default" indicates that the default format should be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_DATE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_DATE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a| [[quarkus-logging-json_quarkus-log-console-json-record-delimiter]]`link:#quarkus-logging-json_quarkus-log-console-json-record-delimiter[quarkus.log.console.json.record-delimiter]`


[.description]
--
The special end-of-record delimiter to be used. By default, newline is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_RECORD_DELIMITER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_RECORD_DELIMITER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-json_quarkus-log-console-json-zone-id]]`link:#quarkus-logging-json_quarkus-log-console-json-zone-id[quarkus.log.console.json.zone-id]`


[.description]
--
The zone ID to use. The special string "default" indicates that the default zone should be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_ZONE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_ZONE_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a| [[quarkus-logging-json_quarkus-log-console-json-exception-output-type]]`link:#quarkus-logging-json_quarkus-log-console-json-exception-output-type[quarkus.log.console.json.exception-output-type]`


[.description]
--
The exception output type to specify.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_EXCEPTION_OUTPUT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_EXCEPTION_OUTPUT_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`detailed`, `formatted`, `detailed-and-formatted` 
|`detailed`


a| [[quarkus-logging-json_quarkus-log-console-json-print-details]]`link:#quarkus-logging-json_quarkus-log-console-json-print-details[quarkus.log.console.json.print-details]`


[.description]
--
Enable printing of more details in the log.

Printing the details can be expensive as the values are retrieved from the caller. The details include the source class name, source file name, source method name, and source line number.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_PRINT_DETAILS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_PRINT_DETAILS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-logging-json_quarkus-log-console-json-key-overrides]]`link:#quarkus-logging-json_quarkus-log-console-json-key-overrides[quarkus.log.console.json.key-overrides]`


[.description]
--
Override keys with custom values. Omitting this value indicates that no key overrides will be applied.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_KEY_OVERRIDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_KEY_OVERRIDES+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-json_quarkus-log-console-json-excluded-keys]]`link:#quarkus-logging-json_quarkus-log-console-json-excluded-keys[quarkus.log.console.json.excluded-keys]`


[.description]
--
Keys to be excluded from the JSON output.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_EXCLUDED_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_EXCLUDED_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-logging-json_quarkus-log-console-json-additional-field-field-name-value]]`link:#quarkus-logging-json_quarkus-log-console-json-additional-field-field-name-value[quarkus.log.console.json.additional-field."field-name".value]`


[.description]
--
Additional field value.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-logging-json_quarkus-log-console-json-additional-field-field-name-type]]`link:#quarkus-logging-json_quarkus-log-console-json-additional-field-field-name-type[quarkus.log.console.json.additional-field."field-name".type]`


[.description]
--
Additional field type specification. Supported types: `string`, `int`, and `long`. String is the default if not specified.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`string`, `int`, `long` 
|`string`


h|[[quarkus-logging-json_quarkus-log-file-json-file-logging]]link:#quarkus-logging-json_quarkus-log-file-json-file-logging[File logging]

h|Type
h|Default

a| [[quarkus-logging-json_quarkus-log-file-json]]`link:#quarkus-logging-json_quarkus-log-file-json[quarkus.log.file.json]`


[.description]
--
Determine whether to enable the JSON console formatting extension, which disables "normal" console formatting.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-logging-json_quarkus-log-file-json-pretty-print]]`link:#quarkus-logging-json_quarkus-log-file-json-pretty-print[quarkus.log.file.json.pretty-print]`


[.description]
--
Enable "pretty printing" of the JSON record. Note that some JSON parsers will fail to read the pretty printed output.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_PRETTY_PRINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_PRETTY_PRINT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-logging-json_quarkus-log-file-json-date-format]]`link:#quarkus-logging-json_quarkus-log-file-json-date-format[quarkus.log.file.json.date-format]`


[.description]
--
The date format to use. The special string "default" indicates that the default format should be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_DATE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_DATE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a| [[quarkus-logging-json_quarkus-log-file-json-record-delimiter]]`link:#quarkus-logging-json_quarkus-log-file-json-record-delimiter[quarkus.log.file.json.record-delimiter]`


[.description]
--
The special end-of-record delimiter to be used. By default, newline is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_RECORD_DELIMITER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_RECORD_DELIMITER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-json_quarkus-log-file-json-zone-id]]`link:#quarkus-logging-json_quarkus-log-file-json-zone-id[quarkus.log.file.json.zone-id]`


[.description]
--
The zone ID to use. The special string "default" indicates that the default zone should be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_ZONE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_ZONE_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a| [[quarkus-logging-json_quarkus-log-file-json-exception-output-type]]`link:#quarkus-logging-json_quarkus-log-file-json-exception-output-type[quarkus.log.file.json.exception-output-type]`


[.description]
--
The exception output type to specify.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_EXCEPTION_OUTPUT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_EXCEPTION_OUTPUT_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`detailed`, `formatted`, `detailed-and-formatted` 
|`detailed`


a| [[quarkus-logging-json_quarkus-log-file-json-print-details]]`link:#quarkus-logging-json_quarkus-log-file-json-print-details[quarkus.log.file.json.print-details]`


[.description]
--
Enable printing of more details in the log.

Printing the details can be expensive as the values are retrieved from the caller. The details include the source class name, source file name, source method name, and source line number.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_PRINT_DETAILS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_PRINT_DETAILS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-logging-json_quarkus-log-file-json-key-overrides]]`link:#quarkus-logging-json_quarkus-log-file-json-key-overrides[quarkus.log.file.json.key-overrides]`


[.description]
--
Override keys with custom values. Omitting this value indicates that no key overrides will be applied.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_KEY_OVERRIDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_KEY_OVERRIDES+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-json_quarkus-log-file-json-excluded-keys]]`link:#quarkus-logging-json_quarkus-log-file-json-excluded-keys[quarkus.log.file.json.excluded-keys]`


[.description]
--
Keys to be excluded from the JSON output.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_EXCLUDED_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_EXCLUDED_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-logging-json_quarkus-log-file-json-additional-field-field-name-value]]`link:#quarkus-logging-json_quarkus-log-file-json-additional-field-field-name-value[quarkus.log.file.json.additional-field."field-name".value]`


[.description]
--
Additional field value.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-logging-json_quarkus-log-file-json-additional-field-field-name-type]]`link:#quarkus-logging-json_quarkus-log-file-json-additional-field-field-name-type[quarkus.log.file.json.additional-field."field-name".type]`


[.description]
--
Additional field type specification. Supported types: `string`, `int`, and `long`. String is the default if not specified.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`string`, `int`, `long` 
|`string`


h|[[quarkus-logging-json_quarkus-log-syslog-json-syslog-logging]]link:#quarkus-logging-json_quarkus-log-syslog-json-syslog-logging[Syslog logging]

h|Type
h|Default

a| [[quarkus-logging-json_quarkus-log-syslog-json]]`link:#quarkus-logging-json_quarkus-log-syslog-json[quarkus.log.syslog.json]`


[.description]
--
Determine whether to enable the JSON console formatting extension, which disables "normal" console formatting.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-logging-json_quarkus-log-syslog-json-pretty-print]]`link:#quarkus-logging-json_quarkus-log-syslog-json-pretty-print[quarkus.log.syslog.json.pretty-print]`


[.description]
--
Enable "pretty printing" of the JSON record. Note that some JSON parsers will fail to read the pretty printed output.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_PRETTY_PRINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_PRETTY_PRINT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-logging-json_quarkus-log-syslog-json-date-format]]`link:#quarkus-logging-json_quarkus-log-syslog-json-date-format[quarkus.log.syslog.json.date-format]`


[.description]
--
The date format to use. The special string "default" indicates that the default format should be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_DATE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_DATE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a| [[quarkus-logging-json_quarkus-log-syslog-json-record-delimiter]]`link:#quarkus-logging-json_quarkus-log-syslog-json-record-delimiter[quarkus.log.syslog.json.record-delimiter]`


[.description]
--
The special end-of-record delimiter to be used. By default, newline is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_RECORD_DELIMITER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_RECORD_DELIMITER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-json_quarkus-log-syslog-json-zone-id]]`link:#quarkus-logging-json_quarkus-log-syslog-json-zone-id[quarkus.log.syslog.json.zone-id]`


[.description]
--
The zone ID to use. The special string "default" indicates that the default zone should be used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_ZONE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_ZONE_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a| [[quarkus-logging-json_quarkus-log-syslog-json-exception-output-type]]`link:#quarkus-logging-json_quarkus-log-syslog-json-exception-output-type[quarkus.log.syslog.json.exception-output-type]`


[.description]
--
The exception output type to specify.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_EXCEPTION_OUTPUT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_EXCEPTION_OUTPUT_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`detailed`, `formatted`, `detailed-and-formatted` 
|`detailed`


a| [[quarkus-logging-json_quarkus-log-syslog-json-print-details]]`link:#quarkus-logging-json_quarkus-log-syslog-json-print-details[quarkus.log.syslog.json.print-details]`


[.description]
--
Enable printing of more details in the log.

Printing the details can be expensive as the values are retrieved from the caller. The details include the source class name, source file name, source method name, and source line number.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_PRINT_DETAILS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_PRINT_DETAILS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-logging-json_quarkus-log-syslog-json-key-overrides]]`link:#quarkus-logging-json_quarkus-log-syslog-json-key-overrides[quarkus.log.syslog.json.key-overrides]`


[.description]
--
Override keys with custom values. Omitting this value indicates that no key overrides will be applied.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_KEY_OVERRIDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_KEY_OVERRIDES+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-logging-json_quarkus-log-syslog-json-excluded-keys]]`link:#quarkus-logging-json_quarkus-log-syslog-json-excluded-keys[quarkus.log.syslog.json.excluded-keys]`


[.description]
--
Keys to be excluded from the JSON output.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_EXCLUDED_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_EXCLUDED_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-logging-json_quarkus-log-syslog-json-additional-field-field-name-value]]`link:#quarkus-logging-json_quarkus-log-syslog-json-additional-field-field-name-value[quarkus.log.syslog.json.additional-field."field-name".value]`


[.description]
--
Additional field value.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-logging-json_quarkus-log-syslog-json-additional-field-field-name-type]]`link:#quarkus-logging-json_quarkus-log-syslog-json-additional-field-field-name-type[quarkus.log.syslog.json.additional-field."field-name".type]`


[.description]
--
Additional field type specification. Supported types: `string`, `int`, and `long`. String is the default if not specified.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`string`, `int`, `long` 
|`string`

|===